# ActDiag

./: .gitignore  CLAUDE.md  README.md  memo.md  output.csv  pyproject.toml  search.yaml  wash_data.py
actdiag/: __main__.py  actuator.py  cli.py  config.py  controller.py  data_utils.py  logging_io.py  plotting.py  scene.py  signals.py  simulate.py  sweep.py
actdiag/backends/: __init__.py  base.py  mujoco_backend.py  openmodelica_backend.py  physx_backend.py
actdiag/fit/: __init__.py  config.py  evaluator.py  reporter.py  sampler.py
examples/: actuator_ideal.yaml  actuator_pd.yaml  controller_inverse_dynamics.yaml  controller_pd.yaml  scenario_chirp.yaml  scenario_frequency_response.yaml  scenario_sine.yaml  scenario_step.yaml  scene_single_joint.yaml  search.yaml  search_dynamic.yaml  search_dynamic_seeded.yaml  search_pd.yaml  sweep_kp.yaml  sweep_kp_tc.yaml  system_dynamic_torque.yaml  system_pd.yaml  system_pd_limited_torque.yaml  system_pid_limited_torque.yaml  test_sine.yaml  test_step.yaml  test_torque_sine.yaml  test_torque_step.yaml
fits/202604181620/: best_fit.yaml  objective_breakdown.json  top_candidates.csv
fits/202604181653/: best_fit.yaml  top_candidates.csv  (+1 more)
results/: comparison.md  scenario_seeded.yaml  sinsweep_verify.md  system_dynamic_best.yaml  system_dynamic_seeded.yaml  system_pd_best.yaml
scripts/: comparison_report.py  extract_step_ref.py  sinsweep_verify.py
tests/: test_actuator.py  test_backends.py  test_config.py  test_controller.py  test_openmodelica_backend.py  test_scene.py  test_signals.py  test_simulate.py  test_sweep.py
(+20 files in other folders)
